objects/CartItem__x.object
<CustomObject>
    <externalDataSource>HDMP_QA</externalDataSource>
    <externalName>CartItem</externalName>
    <fields>
        <fullName>AK_Cart_Item_c__c</fullName>
        <externalDeveloperName>AK_Cart_Item__c</externalDeveloperName>
        <label>AK Cart Item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accessorie_Image_URL_c__c</fullName>
        <externalDeveloperName>Accessorie_Image_URL__c</externalDeveloperName>
        <label>Accessorie Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AdjustmentAmount__c</fullName>
        <externalDeveloperName>AdjustmentAmount</externalDeveloperName>
        <label>Adjustment Amount quantity based</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdjustmentTaxAmount__c</fullName>
        <externalDeveloperName>AdjustmentTaxAmount</externalDeveloperName>
        <label>Adjustment Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B2B_CityTax_Rate_c__c</fullName>
        <externalDeveloperName>B2B_CityTax_Rate__c</externalDeveloperName>
        <label>CityTax Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B2B_CityTax_c__c</fullName>
        <externalDeveloperName>B2B_CityTax__c</externalDeveloperName>
        <label>CityTax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B2B_Item_Total_Tax_c__c</fullName>
        <externalDeveloperName>B2B_Item_Total_Tax__c</externalDeveloperName>
        <label>Total Product Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B2B_StateTax_Rate_c__c</fullName>
        <externalDeveloperName>B2B_StateTax_Rate__c</externalDeveloperName>
        <label>StateTax Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B2B_StateTax_c__c</fullName>
        <externalDeveloperName>B2B_StateTax__c</externalDeveloperName>
        <label>StateTax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B2B_TransitDistrictTax_Rate_c__c</fullName>
        <externalDeveloperName>B2B_TransitDistrictTax_Rate__c</externalDeveloperName>
        <label>TransitDistrict TaxRate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B2B_TransitDistrictTax_c__c</fullName>
        <externalDeveloperName>B2B_TransitDistrictTax__c</externalDeveloperName>
        <label>TransitDistrict Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand_Name_c__c</fullName>
        <externalDeveloperName>Brand_Name__c</externalDeveloperName>
        <label>Brand Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Acura</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CartDeliveryGroupId__c</fullName>
        <externalDeveloperName>CartDeliveryGroupId</externalDeveloperName>
        <label>Cart Delivery Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CartId__c</fullName>
        <externalDeveloperName>CartId</externalDeveloperName>
        <label>Cart ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_c__c</fullName>
        <externalDeveloperName>Color__c</externalDeveloperName>
        <label>Color Marketing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dealer_Installation_Price_c__c</fullName>
        <externalDeveloperName>Dealer_Installation_Price__c</externalDeveloperName>
        <label>Total Installation Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DistributedAdjustmentAmount__c</fullName>
        <externalDeveloperName>DistributedAdjustmentAmount</externalDeveloperName>
        <label>Distributed Promotions Total</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DistributedAdjustmentTaxAmount__c</fullName>
        <externalDeveloperName>DistributedAdjustmentTaxAmount</externalDeveloperName>
        <label>Distributed Promotions Tax Adjustment</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossAdjustmentAmount__c</fullName>
        <externalDeveloperName>GrossAdjustmentAmount</externalDeveloperName>
        <label>Gross Adjustment Amount quantity based</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossUnitPrice__c</fullName>
        <externalDeveloperName>GrossUnitPrice</externalDeveloperName>
        <label>Gross Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Illustration_Group_Image_Id_c__c</fullName>
        <externalDeveloperName>Illustration_Group_Image_Id__c</externalDeveloperName>
        <label>Illustration Group Image Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Illustration_Id_c__c</fullName>
        <externalDeveloperName>Illustration_Id__c</externalDeveloperName>
        <label>Illustration Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_VIN_Fitment_c__c</fullName>
        <externalDeveloperName>Is_VIN_Fitment__c</externalDeveloperName>
        <label>Is VIN Fitment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Package_Quantity_c__c</fullName>
        <externalDeveloperName>Item_Package_Quantity__c</externalDeveloperName>
        <label>Item Package Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemizedAdjustmentAmount__c</fullName>
        <externalDeveloperName>ItemizedAdjustmentAmount</externalDeveloperName>
        <label>Item Promotions Total</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ItemizedAdjustmentTaxAmount__c</fullName>
        <externalDeveloperName>ItemizedAdjustmentTaxAmount</externalDeveloperName>
        <label>Item Promotions Tax Adjustment</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <externalDeveloperName>ListPrice</externalDeveloperName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Cart Item Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetAdjustmentAmount__c</fullName>
        <externalDeveloperName>NetAdjustmentAmount</externalDeveloperName>
        <label>Net Adjustment Amount quantity based</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetUnitPrice__c</fullName>
        <externalDeveloperName>NetUnitPrice</externalDeveloperName>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <externalDeveloperName>Product2Id</externalDeveloperName>
        <label>Product ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Division_c__c</fullName>
        <externalDeveloperName>Product_Division__c</externalDeveloperName>
        <label>Product Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>Honda Auto</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>Acura Auto</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>Motorcycle</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>Powerequipment</label>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Identifier_c__c</fullName>
        <externalDeveloperName>Product_Identifier__c</externalDeveloperName>
        <label>Product Identifier</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Model_Marketing_Name_c__c</fullName>
        <externalDeveloperName>Product_Model_Marketing_Name__c</externalDeveloperName>
        <label>Product Model Marketing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Model_c__c</fullName>
        <externalDeveloperName>Product_Model__c</externalDeveloperName>
        <label>Product Model</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Subdivision_c__c</fullName>
        <externalDeveloperName>Product_Subdivision__c</externalDeveloperName>
        <label>Product Subdivision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Acura</fullName>
                </value>
                <value>
                    <fullName>Motorcycle/Powersports</fullName>
                </value>
                <value>
                    <fullName>Powerequipment</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Engine</fullName>
                </value>
                <value>
                    <fullName>Hrc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type_c__c</fullName>
        <externalDeveloperName>Product_Type__c</externalDeveloperName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Part</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Core Charge</fullName>
                </value>
                <value>
                    <fullName>Motocompacto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <externalDeveloperName>Quantity</externalDeveloperName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesPrice__c</fullName>
        <externalDeveloperName>SalesPrice</externalDeveloperName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Section_Id_c__c</fullName>
        <externalDeveloperName>Section_Id__c</externalDeveloperName>
        <label>Section Id</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Option_c__c</fullName>
        <externalDeveloperName>Shipping_Option__c</externalDeveloperName>
        <label>Shipping Option</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pickup at Dealer only</fullName>
                </value>
                <value>
                    <fullName>Pickup at Dealer, Direct Ship</fullName>
                </value>
                <value>
                    <fullName>Pickup at Dealer, Ship from Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sku__c</fullName>
        <externalDeveloperName>Sku</externalDeveloperName>
        <label>SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalAdjustmentAmount__c</fullName>
        <externalDeveloperName>TotalAdjustmentAmount</externalDeveloperName>
        <label>All Adjustments Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <externalDeveloperName>TotalAmount</externalDeveloperName>
        <label>Total Amount</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalLineAmount__c</fullName>
        <externalDeveloperName>TotalLineAmount</externalDeveloperName>
        <label>Total Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalLineGrossAmount__c</fullName>
        <externalDeveloperName>TotalLineGrossAmount</externalDeveloperName>
        <label>Total Line Gross Amount</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalLineNetAmount__c</fullName>
        <externalDeveloperName>TotalLineNetAmount</externalDeveloperName>
        <label>Total Line Net Amount</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalLineTaxAmount__c</fullName>
        <externalDeveloperName>TotalLineTaxAmount</externalDeveloperName>
        <label>Total Line Tax Amount</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalListPrice__c</fullName>
        <externalDeveloperName>TotalListPrice</externalDeveloperName>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPriceAfterAllAdjustments__c</fullName>
        <externalDeveloperName>TotalPriceAfterAllAdjustments</externalDeveloperName>
        <label>Total Adjusted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPriceTaxAmount__c</fullName>
        <externalDeveloperName>TotalPriceTaxAmount</externalDeveloperName>
        <label>Total Price Tax Amount</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <externalDeveloperName>TotalPrice</externalDeveloperName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPromoAdjustmentAmount__c</fullName>
        <externalDeveloperName>TotalPromoAdjustmentAmount</externalDeveloperName>
        <label>Item Promotions Plus Distributed Promoti</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPromoAdjustmentTaxAmount__c</fullName>
        <externalDeveloperName>TotalPromoAdjustmentTaxAmount</externalDeveloperName>
        <label>Item Promotions Tax Adjustment Plus Dist</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTaxAmount__c</fullName>
        <externalDeveloperName>TotalTaxAmount</externalDeveloperName>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitAdjustedPrice__c</fullName>
        <externalDeveloperName>UnitAdjustedPrice</externalDeveloperName>
        <label>Unit Adjusted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitAdjustmentAmount__c</fullName>
        <externalDeveloperName>UnitAdjustmentAmount</externalDeveloperName>
        <label>Unit Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>op_code_c__c</fullName>
        <externalDeveloperName>op_code__c</externalDeveloperName>
        <label>Accessory Op Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Cart Item</label>
    <pluralLabel>Cart Items</pluralLabel>
</CustomObject>